# ikcas

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/core/: builtins.h  cmd.h  core.h  env.h  eval.h  lex.h  node.h  num.h  parse.h  print.h
inc/logging/: log.h
inc/memory/: arena.h
inc/ui/: plot.h  ui.h
src/: main.c
src/core/: builtins.c  cmd.c  core.c  env.c  eval.c  lex.c  node.c  num.c  parse.c  print.c
src/memory/: arena.c
src/ui/: plot.c  ui.c
